FE : Fixing follows page
